<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="10dp">


    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_marginBottom="30dp"
        android:id="@+id/profile_image"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:src="@mipmap/login_logo"
        app:civ_border_color="@android:color/white"
        app:civ_border_width="2dp"/>


    <EditText
        android:paddingLeft="10dp"
        android:background="@drawable/edittext_bg"
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:hint="用户名"/>

    <EditText
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:background="@drawable/edittext_bg"
        android:inputType="numberPassword"
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:hint="密码"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:orientation="vertical">




    </LinearLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_bg"
        android:text="@string/text_login"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/btn_registered"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_bg"
        android:text="@string/text_registered"
        android:textColor="@android:color/white" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/text_forget_password"
            android:textColor="@color/colorAccent"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:visibility="gone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/app_three_login"
            android:textSize="20sp"
            android:layout_weight="1"/>
        <ImageView

            android:clickable="false"
            android:visibility="gone"
            android:id="@+id/btnLogi_qq"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:src="@mipmap/login_qq"
            android:layout_weight="2"/>




    </LinearLayout>



</LinearLayout>